<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name" translatable="false">Gourmobile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail"></string>

    <string name="address" translatable="false"><xliff:g id="street">%1$s</xliff:g>, <xliff:g id="city">%2$s</xliff:g></string>
    <string name="schedule_time"><xliff:g id="start_time">%1$s</xliff:g> - <xliff:g id="end_time">%2$s</xliff:g></string>
    <string name="information_header">Information</string>
    <string name="search_label">Search vendors…</string>
    <string name="search_hint">search…</string>
    <string name="distance_km"><xliff:g id="distance">%1$d</xliff:g>km</string>
    <string name="distance_miles"><xliff:g id="distance">%1$d</xliff:g>miles</string>


    <string name="title_activity_settings">Settings</string>
    <string name="pref_use_location_title">Use Device Location</string>
    <string name="pref_use_location_key" translatable="false">pref_device_location</string>
    <string name="pref_enabled">Enabled</string>
    <string name="pref_disabled">Not Enabled</string>
    <string name="pref_distance_unit_title">Distance Units</string>
    <string name="pref_distance_unit_key" translatable="false">distance_units</string>
    <string name="pref_unit_killometers">Killometers</string>
    <string name="pref_unit_miles">Miles</string>
    <string name="pref_unit_killometers_values" translatable="false">killometers</string>
    <string name="pref_unit_miles_values" translatable="false">miles</string>
    <string name="pref_custom_location_title">Custom Location</string>
    <string name="pref_custom_location_key" translatable="false">custom_location</string>
    <string name="pref_no_custom_location">No Custom Location Selected</string>
    <string name="no_results_found">No results found!</string>
    <string name="no_network_available">Network offline… :(</string>
    <string name="no_location_available">App cannot function without location access…</string>
    <string name="getting_data">Loading data…</string>
    <string name="contact_email_label">Email: </string>
    <string name="contact_web_label">Website:</string>
    <string name="contact_facebook_label">Facebook:</string>
    <string name="contact_phone_label">Phone:</string>
    <string name="appwidget_text" translatable="false">@string/app_name</string>
    <string name="fab_search_description">Search</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="send_email">Send Email</string>
    <string name="call_phone">Call by phone</string>
    <string name="goto_facebookpage">Go to facebook page</string>
    <string name="goto_twitter">Go to twitter</string>
    <string name="navigate_to">Navigate to %1$s</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="powered_by_google">Powered by Google</string>
    <string name="title_search">Search</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="title_map_activity">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_favourites">No favourites found!</string>

    <!-- TAGS -->
    <string name="asian">Asian food</string>
    <string name="bbqGrill">BBQ</string>
    <string name="burgerSandwiches">Burger &amp; Sandwiches</string>
    <string name="fish">Fish</string>
    <string name="beveragesCoffee">Beverages &amp; Coffee</string>
    <string name="potatoes">Potatoes</string>
    <string name="italian">Italian food</string>
    <string name="localStuff">Regional food</string>
    <string name="sweets">Sweets</string>
    <string name="soups">Soups</string>
    <string name="mexican">Mexican</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="sausages">Sausages</string>
    <string name="salads">Salads</string>
    <string name="curry">Curry</string>
    <string name="icecream">Ice-cream</string>

    <!-- filter -->
    <string name="availability">Availability</string>
    <string name="open_today">Open Today</string>
    <string name="open_this_week">Open This Week</string>
    <string name="all_foodtrucks">All Foodtrucks</string>
    <string name="popular_tags">Popular Tags</string>
    <string name="pref_location_radius_key" translatable="false">radius</string>
    <string name="pref_location_radius_title">Location Radius</string>
    <string name="no_foodtrucks_found_for_radius">No vendors found!\n Try changing the location radius or set a custom location in the settings.</string>
    <string name="default_radius">50</string>
    <string name="btn_next">next</string>
    <string name="description_logo_foodtruck">Logo Foodtruck</string>
    <string name="description_logo_nearby">Logo Notifications Active</string>
    <string name="slide_welcome_title">Welcome!</string>
    <string name="slide_welcome_desc">Gourmobile, the fastest way to find high quality street food in your area.</string>
    <string name="slide_location_title">Location Access</string>
    <string name="slide_location_desc">Gourmobile will list mobile vendors in your area, for which it requires access to location services, it can not function without it.</string>
    <string name="slide_radius_title">Radius</string>
    <string name="slide_radius_desc">Gourmobile will show you vendors in a %1$s radius to your location.</string>
    <string name="slide_thanks_title">Thank you!</string>
    <string name="slide_thanks_desc">Thanks, for using Gourmobile!</string>
    <string name="slide_nearby_title">Mobile vendors in your area</string>
    <string name="slide_nearby_desc">Get notified about vendors in your area.</string>
    <string name="btn_location_access">grant location access</string>
    <string name="btn_next_ok">OK</string>
    <string name="btn_set_radius">Change radius</string>
    <string name="snackbar_display_local_time">Times displayed in local Timezone</string>
    <string name="snackbar_btn_ok">OK</string>
    <string name="pref_snackbar_dismissed_key" translatable="false">snackbar_dismissed</string>

    <!-- geofence errors -->
    <string name="geofence_transition_invalid_type" translatable="false">Geofence transition error: invalid transition type %1$d</string>
    <string name="geofence_not_available" translatable="false">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences" translatable="false">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents" translatable="false">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error" translatable="false">
        Unknown error: the Geofence service is not available now
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered" translatable="false">Entered</string>
    <string name="geofence_transition_exited" translatable="false">Exited</string>
    <string name="unknown_geofence_transition" translatable="false">Unknown Transition</string>

    <string name="geofence_notification_title">Multiple vendors in your area</string>
    <string name="divider_today">today</string>
    <string name="divider_this_week">this week</string>
    <string name="divider_not_available">not currently on the road</string>
    <string name="pref_nearby_title">Get notified about nearby vendors</string>
    <string name="pref_nearby_key" translatable="false">pref_nearby_notification</string>
    <string name="divider_tomorrow">tomorrow</string>
    <string name="bottom_nav_today">TODAY</string>
    <string name="bottom_nav_tomorrow">TOMORROW</string>
    <string name="bottom_nav_this_week">THIS WEEK</string>
    <string name="location_denied">Please give location access to Gourmobile in the app settings on your device, it will not function without it.</string>
    <string name="location_disabled">Please enable location services on your devices, Gourmobile cannot function without it.</string>

    <string name="remove_ads_pref_key" translatable="false">remove_ads</string>
    <string name="title_activity_billing">Premium</string>
    <string name="btn_buy">buy</string>
    <string name="btn_buy_purchased">purchased</string>
    <string name="title_activity_settings_about">About</string>
    <string name="pref_remove_ads_title">Remove Ads / Support Development</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_version_key" translatable="false">pref_version</string>
    <string name="pref_powered_by_craftplaces">Data provided by craftplaces.com</string>
    <string name="pref_privacy_title" translatable="false">Privacy</string>
    <string name="pref_privacy_key" translatable="false">pref_privacy</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_key" translatable="false">pref_about_key</string>
    <string name="pref_craftplaces_key" translatable="false">pref_craftplaces_key</string>
    <string name="open_till">Open till: %1$s</string>
</resources>
