<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:title="@string/pref_use_location_title"
        android:key="@string/pref_use_location_key"
        android:summaryOn="@string/pref_enabled"
        android:summaryOff="@string/pref_disabled"
        android:defaultValue="true"
        />

    <co.pugo.apps.foodtruckfinder.ui.PlacePickerPreference
        android:title="@string/pref_custom_location_title"
        android:key="@string/pref_custom_location_key"
        />

    <ListPreference
        android:title="@string/pref_distance_unit_title"
        android:key="@string/pref_distance_unit_key"
        android:entryValues="@array/pref_distance_unit_values"
        android:entries="@array/pref_distance_unit_options"
        android:defaultValue="@string/pref_unit_killometers"/>

    <EditTextPreference
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:title="@string/pref_location_radius_title"
        android:key="@string/pref_location_radius_key"
        android:defaultValue="@string/default_radius"/>
</PreferenceScreen>