<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="32dp">

    <LinearLayout
        android:id="@+id/content_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/description_logo_nearby"
            android:src="@drawable/ic_notifications_active_white_96dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_nearby_title"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/slide_nearby_desc"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>

    <android.support.v7.widget.SwitchCompat
        android:layout_below="@id/content_wrapper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:id="@+id/switch_nearby"
        android:text="@string/pref_nearby_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:theme="@style/SwitchWelcomeScreen"
        android:checked="false"/>

</RelativeLayout>
