<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="32dp">

    <LinearLayout
        android:id="@+id/content_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_logo_foodtruck"
            android:src="@drawable/ic_location_white_96dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_location_title"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/slide_location_desc"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </LinearLayout>

    <Button
        android:layout_below="@id/content_wrapper"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_location_access"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_location_access"
        android:onClick="requestLocationAccess"
        android:textColor="@color/white"
        android:theme="@style/ButtonWelcomeScreen"/>

</RelativeLayout>